break up bot_api_controller.ex
